# grz-check

./: Cargo.toml  README.md
src/: checker.rs  fastq.rs  main.rs
src/checks/: bam.rs  checksum.rs  common.rs  fastq.rs  mod.rs  raw.rs
