[package]
name = "grz-check"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
noodles = { version = "0.99.0", features = ["bam", "fastq", "bgzf"] }
niffler = "3.0.0"
rayon = "1.10.0"
indicatif = { version = "0.17.11", features = ["rayon", "improved_unicode"] }
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20"
flate2 = "1.1"
csv = "1.3"